[package]
name = "typst-web"
version = "0.1.0"
edition = "2021"
description = "A web server that takes a Typst template and renders it."
license = "MIT OR Apache-2.0"
repository = "https://github.com/simoneromano96/typst-web"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
] }
utoipa = "5.3.1"
